# IBM-Fault-Localization-Work

./: .gitignore  README.md
Classifier Notebook/: Classifier.ipynb  jlm_old_maybe.csv  perf.csv  test.csv
Files to Upload/: dupe2.java  lusearch_params.txt
Files to Upload/Dacapo/jython/: jlm.csv  perf.csv  test.csv
Files to Upload/Renaissance/scala-stm/: jlm.csv  perf.csv  test.csv
Files to Upload/lusearch classifier files/: test.csv
Files to Upload/lusearch files/: jlm.csv
Initial Build/: files.db  package-lock.json  package.json
Initial Build/Coordinator/client/src/: Classifier.js
Initial Build/Coordinator/flask-server/: server.py
Initial Build/Localization/: Readme.txt  SynchronizedMethodBench.java
Initial Build/Localization/Files/PI-IBM/Dpiperf/src/perfutil/: CMakeLists.txt  perfdbg.hpp  perfutil.cpp
Initial Build/Localization/Files/PI-IBM/Dpiperf/src/perfutil/linux/: xpu_ptt.cpp
Initial Build/client/: package-lock.json  package.json  postcss.config.js
Initial Build/client/src/: App.js  Home.js  index.js
Initial Build/flask-server/: files.db  server.py
Initial Build/lcClassifier/flask-server/: server.py  testClassifier.py
Initial Build/lcClassifier/flask-server/Files/: DF_train.csv  cluster_results.csv  jlm.csv  kmeans12.pkl  pca_DF_train.csv  perf.csv  test.csv
Initial_Build/: files.db
Initial_Build/CommonDataStore/flask-server/: server.py
Initial_Build/CommonDataStore/flask-server/Uploads/: pattern_matcher.json  results.results  stacktraces.log-rt
Initial_Build/Coordinator/client/: package-lock.json  package.json
Initial_Build/Coordinator/client/src/: App.js
Initial_Build/Coordinator/flask-server/: server.py  serverv2.py
Initial_Build/Localization/: a2n.err  run_jlm.sh  testscript.py
Initial_Build/Localization/Files/: a2n.err  log-jtnm_8279  log-msg_8279  log-rt.1_8279
Initial_Build/Localization/PI-IBM/incase/Dpiperf/src/: CMakeLists.txt
Initial_Build/Localization/PI-IBM/incase/Dpiperf/src/a2n/: initterm.c  util.c  util.h
Initial_Build/Localization/PI-IBM/incase/Dpiperf/src/a2n/aix/: aixsyms.h
Initial_Build/Localization/PI-IBM/incase/Dpiperf/src/perfutil/: TaskInfo.cpp  TaskInfo.hpp
Initial_Build/Localization/PI-IBM/incase/Dpiperf/src/perfutil/linux/: xTaskInfo.cpp
Initial_Build/Localization/PI-IBM/incase/Dpiperf/src/post/: ppc64dis.c  s390dis.c
Initial_Build/Localization/PI-IBM/incase/Dpiperf/src/scripts/: rtpost.py
Initial_Build/Localization/PI-IBM/incase/Dpiperf/src/utils/: common.c  pi_time.h
Initial_Build/Localization/logs/: log-jtnm_10524  log-jtnm_1179  log-jtnm_278  log-jtnm_3070  log-jtnm_333  log-jtnm_3735  log-jtnm_473  log-jtnm_487  log-jtnm_6106  log-jtnm_633  log-msg_10524  log-msg_1179  log-msg_278  log-msg_3070  log-msg_333  log-msg_473  log-msg_487  log-msg_6106  log-msg_633  log-rt.1_10524  log-rt.1_1179  log-rt.1_278  log-rt.1_3070  log-rt.1_333  log-rt.1_3735  log-rt.1_473  log-rt.1_487  log-rt.1_633  log-rt.7_1924
Initial_Build/Main/client/: package-lock.json  package.json
Initial_Build/Main/flask-server/: serverv2.py
Initial_Build/apIdentifier/flask-server/: server.py
Initial_Build/apIdentifier/staitcAnalysis-main/: example_1.txt  example_2.txt
Initial_Build/crLocator/flask-server/: a2n.err  run_rtdriver.sh  server.py  stacktraces.log-rt
Initial_Build/lcClassifier/flask-server/: server.py  testClassifier.py
Localization/: a2n.err  testscript.py
Localization/Files/: Hot_1.java
Localization/PI-IBM/incase/Dpiperf/src/jprof/: CMakeLists.txt  dump.c  parse_jprof.c  socket.c  thread.c  tree.h  util.c
Localization/PI-IBM/incase/Dpiperf/src/jprof/plugin/: JprofPlugin.h
Localization/logs/: log-jtnm_2314756  log-msg_2314756  log-rt.1_2314756
Localization/scratch/: lusearch.out30  lusearch.out33  lusearch.out34  lusearch.out35
New folder/: Notes.txt
New folder/app-name/: pom.xml
(+1517 files in other folders)
